# compiler

./: .gitignore  CMakeLists.txt  expression.txt  grammar.gfx  grammar.txt  program-example.txt  program.fx  program.txt
fx/: package.json
fx/syntaxes/: fxx.tmLanguage.json
lib/catch2/: catch.hpp
scripts/: compile.sh
src/: Compiler.h  Reader.h  main.cpp
src/LLParser/: LLParser.cpp  LLParser.h  RemapToken.h  Table.h
src/LLParser/error/: StringifyError.cpp  StringifyError.h
src/ast/: AST.drawio  Entity.h  Program.h  Type.h
src/ast/declaration/: Declaration.h  FunctionDeclaration.h  VariableDeclaration.h
src/ast/expression/: ArrayExpression.h  ArrowFunctionExpression.h  AssignmentExpression.h  BinaryExpression.h  CallExpression.h  Expression.h  ExpressionType.h  InitializerListExpression.h  MemberExpression.h  NewExpression.h  ObjectExpression.h  Operators.h  Term.h  UnaryExpression.h
src/ast/statement/: AssignmentStatement.h  BlockStatement.h  ExpressionStatement.h  IfStatement.h  ReturnStatement.h  Statement.h  WhileStatement.h
src/astGenerator/: ASTGenerator.cpp  ASTGenerator.h  Adapter.h  Calculate.h  CalculateCallExpressionType.h  CalculateType.h  SymbolTable.h  Type.h
src/codeGenerator/: Code.h  CodeGenerator.h  CodeLabelGenerator.h
src/emptyRulesDeleter/: EmptyRulesDeleter.h
src/errors/: Error.h  ErrorHandler.h
src/extra/: Reader.h
src/extra/monkey/: main.cpp
src/extra/robot/: main.cpp
src/grammarOptimizer/: GrammarOptimizer.cpp  GrammarOptimizer.h
src/guidesBuilder/: GuidesBuilder.cpp  GuidesBuilder.h
src/guidesBuilder/emptyRulesDeleter/: EmptyRulesDeleter.h
src/guidesBuilder/parseRules/: ParseRules.cpp  ParseRules.h
src/lexer/: Lexer.cpp  Lexer.h  createArchive.bat
src/lexer/reader/: Reader.h
src/lexer/rules/: Id.h  Number.h  ReservedWords.h  SpecialChars.h  String.h
src/lexer/token/: Token.h
src/parseRawRules/: ParseRules.cpp  StringifyRawRules.cpp  StringifyRawRules.h  StringifyRules.h
src/parseRules/: ParseRawRules.cpp  ParseRules.cpp  ParseRules.h  StringifyRules.cpp  StringifyRules.h
src/parser/: Parser.cpp  Parser.h  RemapToken.h
src/parser/error/: StringifyError.cpp  StringifyError.h
src/parser/rules/: Expression.cpp  ExpressionList.cpp  Ident.cpp  Operations.h  SimExp.cpp  SimTerm.cpp  Term.cpp
src/print/: PrintContainer.h
src/robot/: Reader.h  main.cpp
src/rules/: Expression.h  ExpressionList.h  Ident.h  Operation.h  Operations.h  Program.h  SimExp.h  SimTerm.h  Term.h
src/table/: Table.h
src/tableBuilder/: TableBuilder.cpp  TableBuilder.h
src/tableBuilder/parseRules/: ParseRules.cpp  ParseRules.h
src/tableParser/: TableParser.cpp  TableParser.h
src/utils/: FoldLeft.h
tests/: CombineStringLines.h  Compiler_tests.cpp  Expression_tests.cpp  Ident_tests.cpp  Lexer_tests.cpp  Reader_tests.cpp  Term_tests.cpp  e2e-parser-tests.cpp  rules.txt  slr_tests.cpp
tests/LLParser/: LLParser_tests.cpp
tests/astGenerator/: ASTGenerator_tests.cpp  CalculateCallExpressionType_tests.cpp  SymbolTable_tests.cpp
tests/codeGenerator/: CodeGenerator_tests.cpp
tests/compiler/: Compiler_tests.cpp
tests/compiler/codes/: call_diffrent_arguments_count.fx  call_native_functions  change_variable_value.fx  compile_two_constants.fx  const_declaration_with_arithmetic_expression.fx  const_declaration_with_bool_expression.fx  const_declaration_with_simple_expression.fx  create_function_from_function.fx  fibonacci.fx  fold_left.fx  function_inside_function.fx  get_array_element.fx  if_else_statement.fx  if_elseif_else_statement  if_statement.fx  iter_drop.fx  iter_filter  iter_reverse  iter_simple  iter_take.fx  iter_transform.fx  partly_called_function.fx  piphagor_table.fx  simple_arrow_function_expression.fx  while_statement.fx
tests/compiler/codes/negative/: add_bool_and_integer.fx  declare_two_constants_with_the_same_names.fx  use_undefined_variable.fx
tests/compiler/snapshots/: call_diffrent_arguments_count.prmbc.snapshot  call_native_functions.prmbc.snapshot  change_variable_value.snapshot  compile_const_declaration.prmbc.snapshot  compile_two_constants.prmbc.snapshot  const_declaration_with_arithmetic_expression.snapshot  const_declaration_with_bool_expression.prmbc.snapshot  const_declaration_with_simple_expression.prmbc.snapshot  create_function_from_function.prmbc.snapshot  fibonacci.prmbc.snapshot  fold_left.prmbc.snapshot  function_inside_function.prmbc.snapshot  get_array_element.prmbc.snapshot  if_else_statement.prmbc.snapshot  if_elseif_else_statement.prmbc.snapshot  if_elseif_else_statement.snapshot  if_statement.prmbc.snapshot  if_statement.snapshot  iter_drop.prmbc.snapshot  iter_drop.snapshot  iter_filter.prmbc.snapshot  iter_filter.snapshot  iter_reverse.prmbc.snapshot  iter_reverse.snapshot  iter_simple.prmbc.snapshot  iter_simple.snapshot  iter_take.prmbc.snapshot  iter_take.snapshot  iter_transform.prmbc.snapshot  iter_transform.snapshot  partly_called_function.prmbc.snapshot  pass_function_as_argument.prmbc.snapshot  pass_function_as_argument.snapshot  pipeline.prmbc.snapshot  pipeline.snapshot  piphagor_table.prmbc.snapshot  simple_arrow_function_expression.prmbc.snapshot  simple_arrow_function_expression.snapshot  while_statement.prmbc.snapshot
tests/compiler/snapshots/negative/: add_bool_and_integer.prmbc.snapshot  declare_two_constants_with_the_same_names.prmbc.snapshot  use_undefined_variable.snapshot
tests/emptyRulesDeleter/: EmptyRulesDeleter_tests.cpp
tests/guidesBuilder/: GrammarOptimizer_tests.cpp  GuidesBuilder_tests.cpp
tests/lexer/: Lexer_tests.cpp  Reader_tests.cpp
tests/parser/: Expression_tests.cpp  Parser_tests.cpp  parser-tests.cpp
tests/tableBuilder/: TableBuilder_tests.cpp
